--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.1.0",
     "dat.gui": "^0.7.7",
+    "gsap": "^3.11.5",
     "html-loader": "^2.1.1",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.9",
@@ -21,6 +22,7 @@
     "raw-loader": "^4.0.2",
     "style-loader": "^2.0.0",
     "three": "^0.126.0",
+    "tween": "^0.9.0",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
