--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mini-css-extract-plugin": "^1.3.9",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
+    "sass": "^1.74.1",
     "style-loader": "^2.0.0",
     "three": "^0.126.0",
     "tween": "^0.9.0",
@@ -30,7 +31,6 @@
   },
   "devDependencies": {
     "file-loader": "^6.2.0",
-    "node-sass": "^8.0.0",
     "sass-loader": "^13.2.2"
   }
 }
